--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="create_task_form_label">Create a task</string>
     <string name="create_task_input_placeholder">Task name</string>
     <string name="create_task_submit">Create task</string>
+    <string name="alt_img_delete">Delete</string>
 </resources>
