--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="create_task_input_placeholder">Task name</string>
     <string name="create_task_submit">Create task</string>
     <string name="alt_img_delete">Delete</string>
+    <string name="err_task_name_too_short">Task name too short!</string>
+    <string name="err_task_creation">Couldn\'t create task! Please try again…</string>
 </resources>
