--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="err_task_creation">Couldn\'t create task! Please try again…</string>
     <string name="no_task_yet_msg">You do not have any task yet.</string>
     <string name="activity_new_task_label">Create a new task</string>
+    <string name="msg_confirm_delete_task">Do you really want to delete this task? It can be reverted !</string>
+    <string name="btn_confirm_task_delete">Delete</string>
+    <string name="btn_cancel_task_delete">Cancel</string>
 </resources>
