Created dialog to create task

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,6 @@
     <string name="msg_confirm_delete_task">Do you really want to delete this task? It can be reverted !</string>
     <string name="btn_confirm_task_delete">Delete</string>
     <string name="btn_cancel_task_delete">Cancel</string>
+    <string name="btn_cancel_dialog_create_task">Cancel</string>
+    <string name="dialog_create_task_title">Create a new task</string>
 </resources>
